k8s/infra/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    name: infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring
